Update MQTT IKEA Tradfri on/off Switch blueprint to version 3.0.2. This release refines action trigger IDs for improved clarity and consistency, changing the IDs for 'on', 'off', and brightness actions to better reflect their functionality. The version number has been updated to reflect these changes, ensuring a more intuitive user experience.

--- a/z2m-ikea-on-off.yaml
+++ b/z2m-ikea-on-off.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v3.0.1
+  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v3.0.2
   description: Control lights with a IKEA Tradfri on/off Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
   input:
@@ -177,31 +177,31 @@ trigger:
     device_id: !input dimmer_switch
     type: action
     subtype: on
-    id: "on"
+    id: on_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: brightness_move_up
-    id: "brightness_move_up"
+    id: brightness_move_up
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: brightness_move_down
-    id: "brightness_move_down"
+    id: brightness_move_down
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: off
-    id: "off"
+    id: off_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: brightness_stop
-    id: "brightness_stop"
+    id: brightness_stop
 action:
   - variables:
       command: "{{ trigger.id }}"
@@ -222,7 +222,7 @@ action:
           0
         {% endif %}
   - choose:
-      - conditions: "{{ command == 'on' }}"
+      - conditions: "{{ command == 'on_press' }}"
         sequence:
           - service: scene_presets.stop_dynamic_scenes_for_targets
             data:
@@ -254,7 +254,7 @@ action:
               value: >
                 {{ {"scene": (current_preset + 1) % included_scenes | length, "timestamp": as_timestamp(now())} | to_json }}
       - conditions:
-          - "{{ command == 'off' }}"
+          - "{{ command == 'off_press' }}"
         sequence:
           - service: light.turn_off
             target:
