Update MQTT IKEA Tradfri on/off Switch blueprint to version 3.0.3. This release corrects the formatting of action trigger subtypes for 'on' and 'off' actions, ensuring improved clarity and consistency in the integration. The version number has been updated to reflect these changes.

--- a/z2m-ikea-on-off.yaml
+++ b/z2m-ikea-on-off.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v3.0.2
+  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v3.0.3
   description: Control lights with a IKEA Tradfri on/off Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
   input:
@@ -176,7 +176,7 @@ trigger:
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
-    subtype: on
+    subtype: "on"
     id: on_press
   - trigger: device
     domain: mqtt
@@ -194,7 +194,7 @@ trigger:
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
-    subtype: off
+    subtype: "off"
     id: off_press
   - trigger: device
     domain: mqtt
