--- a/z2m-ikea-on-off.yaml
+++ b/z2m-ikea-on-off.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v3.0.3
+  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v3.0.4
   description: Control lights with a IKEA Tradfri on/off Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
   input:
@@ -196,12 +196,12 @@ trigger:
     type: action
     subtype: "off"
     id: off_press
-  - trigger: device
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: brightness_stop
-    id: brightness_stop
+    id: brightness_stop #}
 action:
   - variables:
       command: "{{ trigger.id }}"
