--- a/z2m-rwl022-scenes.yaml
+++ b/z2m-rwl022-scenes.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL022) v3.0.2
+  name: MQTT Philips Hue Dimmer Switch (RWL022) v3.0.4
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -112,78 +112,78 @@ trigger:
     type: action
     subtype: on_press_release
     id: on_press_release
-  - trigger: device
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: on_hold_release
-    id: on_hold_release
+    id: on_hold_release #}
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: off_press_release
     id: off_press_release
-  - trigger: device
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: off_hold_release
-    id: off_hold_release
-  - trigger: device
+    id: off_hold_release #}
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: up_press_release
-    id: up_press_release
-  - trigger: device
+    id: up_press_release #}
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: up_hold_release
-    id: up_hold_release
-  - trigger: device
+    id: up_hold_release #}
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: down_press_release
-    id: down_press_release
-  - trigger: device
+    id: down_press_release #}
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: down_hold_release
-    id: down_hold_release
-  - trigger: device
+    id: down_hold_release #}
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: recall_0
-    id: recall_0
-  - trigger: device
+    id: recall_0 #}
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: recall_1
-    id: recall_1
-  - trigger: device
+    id: recall_1 #}
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: on_press
-    id: on_press
+    id: on_press #}
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: on_hold
     id: on_hold
-  - trigger: device
+  {# - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: off_press
-    id: off_press
+    id: off_press #}
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
@@ -237,18 +237,13 @@ variables:
 
 action:
   choose:
-    - conditions: "{{ command == 'on_press' }}"
+    - conditions: "{{ command == 'on_press_release' }}"
       sequence:
         - service: scene.turn_on
           target:
             entity_id: !input main_scene
           data:
             transition: !input transition_time
-    - conditions: "{{ command == 'on_double_press' }}"
-      sequence:
-        - service: scene.turn_on
-          target:
-            entity_id: !input aux_scene_on
     - conditions:
         - "{{ command == 'up_hold' or command == 'up_press'}}"
         - "{{ not (brightness_zigbee | default(false)) }}"
@@ -310,7 +305,7 @@ action:
                     brightness_pct: 1
                     transition: !input transition_time
                 - delay: !input transition_time
-    - conditions: "{{ command == 'off_press' }}"
+    - conditions: "{{ command == 'off_press_release' }}"
       sequence:
         - service: scene.turn_on
           data_template:
