Refactor MQTT dimmer switch blueprints to improve action trigger clarity. This update comments out unused action triggers for the IKEA Tradfri and Philips Hue Dimmer Switches, streamlining the configuration files. Additionally, the .vscode/settings.json file has been removed. These changes enhance maintainability and ensure a more intuitive user experience.

--- a/z2m-rwl022-scenes.yaml
+++ b/z2m-rwl022-scenes.yaml
@@ -112,78 +112,78 @@ trigger:
     type: action
     subtype: on_press_release
     id: on_press_release
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: on_hold_release
-    id: on_hold_release #}
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: on_hold_release
+  #   id: on_hold_release
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: off_press_release
     id: off_press_release
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: off_hold_release
-    id: off_hold_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: up_press_release
-    id: up_press_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: up_hold_release
-    id: up_hold_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: down_press_release
-    id: down_press_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: down_hold_release
-    id: down_hold_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: recall_0
-    id: recall_0 #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: recall_1
-    id: recall_1 #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: on_press
-    id: on_press #}
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: off_hold_release
+  #   id: off_hold_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: up_press_release
+  #   id: up_press_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: up_hold_release
+  #   id: up_hold_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: down_press_release
+  #   id: down_press_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: down_hold_release
+  #   id: down_hold_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: recall_0
+  #   id: recall_0
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: recall_1
+  #   id: recall_1
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: on_press
+  #   id: on_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: on_hold
     id: on_hold
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: off_press
-    id: off_press #}
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: off_press
+  #   id: off_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
