--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -250,108 +250,96 @@ trigger:
     type: action
     subtype: on_press_release
     id: on_press_release
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: on_hold_release
-    id: on_hold_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: off_press_release
-    id: off_press_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: off_hold_release
-    id: off_hold_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: up_press_release
-    id: up_press_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: up_hold_release
-    id: up_hold_release
-  - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: down_press_release
-    id: down_press_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: down_hold_release
-    id: down_hold_release #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: recall_0
-    id: recall_0
-  - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: recall_1
-    id: recall_1 #}
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: on_press
-    id: on_press #}
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: on_hold_release
+  #   id: on_hold_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: off_press_release
+  #   id: off_press_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: off_hold_release
+  #   id: off_hold_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: up_press_release
+  #   id: up_press_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: up_hold_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: down_press_release
+  #   id: down_press_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: down_hold_release
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: recall_0
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: recall_1
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: on_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: on_hold
-    id: on_hold
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: off_press
-    id: off_press
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: off_hold
-    id: off_hold #}
-  - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: up_press
-    id: up_press
-  - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: up_hold
-    id: up_hold
-  - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: down_press
-    id: down_press
-  - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: down_hold
-    id: down_hold
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: off_hold
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: up_press
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: up_hold
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: down_press
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: down_hold
 
 variables:
   command: "{{ trigger.id }}"
