Refactor IKEA on/off switch blueprint by commenting out unused action triggers. This change streamlines the configuration for improved clarity and maintainability, ensuring a more intuitive user experience. No version change is included in this commit.

--- a/z2m-ikea-on-off.yaml
+++ b/z2m-ikea-on-off.yaml
@@ -196,12 +196,12 @@ trigger:
     type: action
     subtype: "off"
     id: off_press
-  {# - trigger: device
-    domain: mqtt
-    device_id: !input dimmer_switch
-    type: action
-    subtype: brightness_stop
-    id: brightness_stop #}
+  # - trigger: device
+  #   domain: mqtt
+  #   device_id: !input dimmer_switch
+  #   type: action
+  #   subtype: brightness_stop
+  #   id: brightness_stop
 action:
   - variables:
       command: "{{ trigger.id }}"
