Update MQTT blueprints for IKEA Tradfri on/off switch and Philips Hue Dimmer RWL022 to versions 3.0.4 and 3.2.5. This release corrects the action trigger logic in the IKEA blueprint for improved accuracy and updates the version number for the Philips Hue blueprint, enhancing clarity and maintainability. These changes ensure a more intuitive user experience when controlling light scenes.

--- a/z2m-ikea-on-off.yaml
+++ b/z2m-ikea-on-off.yaml
@@ -255,7 +255,7 @@ action:
                 {{ {
                     "scene": (current_preset + 1) % included_scenes | length,
                     "timestamp": as_timestamp(now()),
-                    "type": (included_scenes[(current_preset + 1) % included_scenes | length] | from_json).type
+                    "type": (included_scenes[current_preset] | from_json).type
                    } | to_json }}
       - conditions:
           - "{{ command == 'off_press' }}"
