--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.2.5"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.2.6"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -268,23 +268,23 @@ trigger:
   #   type: action
   #   subtype: off_hold_release
   #   id: off_hold_release
-  # - trigger: device
-  #   domain: mqtt
-  #   device_id: !input dimmer_switch
-  #   type: action
-  #   subtype: up_press_release
-  #   id: up_press_release
+  - trigger: device
+    domain: mqtt
+    device_id: !input dimmer_switch
+    type: action
+    subtype: up_press_release
+    id: up_press_release
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: up_hold_release
-  # - trigger: device
-  #   domain: mqtt
-  #   device_id: !input dimmer_switch
-  #   type: action
-  #   subtype: down_press_release
-  #   id: down_press_release
+  - trigger: device
+    domain: mqtt
+    device_id: !input dimmer_switch
+    type: action
+    subtype: down_press_release
+    id: down_press_release
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
@@ -325,21 +325,21 @@ trigger:
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: up_press
-  # - trigger: device
-  #   domain: mqtt
-  #   device_id: !input dimmer_switch
-  #   type: action
-  #   subtype: up_hold
+  - trigger: device
+    domain: mqtt
+    device_id: !input dimmer_switch
+    type: action
+    subtype: up_hold
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: down_press
-  # - trigger: device
-  #   domain: mqtt
-  #   device_id: !input dimmer_switch
-  #   type: action
-  #   subtype: down_hold
+  - trigger: device
+    domain: mqtt
+    device_id: !input dimmer_switch
+    type: action
+    subtype: down_hold
 
 variables:
   command: "{{ trigger.id }}"
@@ -466,7 +466,7 @@ action:
                       transition: !input dynamic_transition
                       interval: !input dynamic_interval
       - conditions:
-          - "{{ command == 'up_hold' or command == 'up_press'}}"
+          - "{{ command == 'up_hold' or command == 'up_press_release'}}"
           - "{{ not (brightness_zigbee | default(false)) }}"
         sequence:
           - choose:
@@ -491,7 +491,7 @@ action:
                       brightness_pct: 100
                       transition: !input transition_time
       - conditions:
-          - "{{ command == 'down_hold' or command == 'down_press' }}"
+          - "{{ command == 'down_hold' or command == 'down_press_release' }}"
           - "{{ not (brightness_zigbee | default(false)) }}"
         sequence:
           - choose:
