--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.2.6"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.2.7"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -447,7 +447,7 @@ action:
               targets:
                 entity_id: "{{ target_lights }}"
           - choose:
-              - conditions: "{{ (included_scenes[0] | from_json).type == 'static' }}"
+              - conditions: "{{ (included_scenes[0] | from_json).type == 'static' or (included_scenes[0] | from_json).type == '' }}"
                 sequence:
                   - action: scene_presets.apply_preset
                     data:
@@ -465,31 +465,31 @@ action:
                         entity_id: "{{ target_lights }}"
                       transition: !input dynamic_transition
                       interval: !input dynamic_interval
-      - conditions:
-          - "{{ command == 'up_hold' or command == 'up_press_release'}}"
-          - "{{ not (brightness_zigbee | default(false)) }}"
-        sequence:
-          - choose:
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
-                sequence:
-                  - action: light.turn_on
-                    target:
-                      entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
-                    data:
-                      brightness_step_pct: "{{ hold_press_change }}"
-                      transition: !input transition_time
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
-                sequence:
-                  - action: light.turn_on
-                    target:
-                      entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
-                    data:
-                      brightness_pct: 100
-                      transition: !input transition_time
+      # - conditions:
+      #     - "{{ command == 'up_hold' or command == 'up_press_release'}}"
+      #     - "{{ not (brightness_zigbee | default(false)) }}"
+      #   sequence:
+      #     - choose:
+      #         - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
+      #           sequence:
+      #             - action: light.turn_on
+      #               target:
+      #                 entity_id:
+      #                   "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+      #                   | map(attribute='entity_id') | list }}"
+      #               data:
+      #                 brightness_step_pct: "{{ hold_press_change }}"
+      #                 transition: !input transition_time
+      #         - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
+      #           sequence:
+      #             - action: light.turn_on
+      #               target:
+      #                 entity_id:
+      #                   "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+      #                   | map(attribute='entity_id') | list }}"
+      #               data:
+      #                 brightness_pct: 100
+      #                 transition: !input transition_time
       - conditions:
           - "{{ command == 'down_hold' or command == 'down_press_release' }}"
           - "{{ not (brightness_zigbee | default(false)) }}"
@@ -550,3 +550,26 @@ action:
                   "timestamp": as_timestamp(now()),
                   "type": (included_scenes[current_preset] | from_json).type
                 } | to_json }}
+  - choose:
+      - conditions:
+          - "{{ command == 'up_hold' or command == 'down_hold' }}"
+          - "{{ not (brightness_zigbee | default(false)) }}"
+        sequence:
+          - service: persistent_notification.create
+            data:
+              message: >
+                Debug Info:
+                Command: {{ command }}
+                Lights: {{ target_lights }}
+                On Lights: {{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}
+                Brightness Check: {{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length }}
+                Hold Press Change: {{ hold_press_change }}
+          - choose:
+              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | list | length > 0 }}"
+                sequence:
+                  - service: light.turn_on
+                    target:
+                      entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
+                    data:
+                      brightness_step_pct: "{{ hold_press_change if command == 'up_hold' else -hold_press_change }}"
+                      transition: !input transition_time
