--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.2.8"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.2.7"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -279,6 +279,7 @@ trigger:
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: up_hold_release
+  #   id: up_hold_release
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
@@ -290,57 +291,67 @@ trigger:
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: down_hold_release
+  #   id: down_hold_release
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: recall_0
+  #   id: recall_0
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: recall_1
+  #   id: recall_1
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: on_press
+  #   id: on_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: on_hold
+    id: on_hold
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: off_press
+    id: off_press
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: off_hold
+  #   id: off_hold
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: up_press
+  #   id: up_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: up_hold
+    id: up_hold
   # - trigger: device
   #   domain: mqtt
   #   device_id: !input dimmer_switch
   #   type: action
   #   subtype: down_press
+  #   id: down_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
     subtype: down_hold
-
+    id: down_hold
 variables:
   command: "{{ trigger.id }}"
   included_scenes: !input included_scenes
@@ -465,31 +476,31 @@ action:
                         entity_id: "{{ target_lights }}"
                       transition: !input dynamic_transition
                       interval: !input dynamic_interval
-      # - conditions:
-      #     - "{{ command == 'up_hold' or command == 'up_press_release'}}"
-      #     - "{{ not (brightness_zigbee | default(false)) }}"
-      #   sequence:
-      #     - choose:
-      #         - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
-      #           sequence:
-      #             - action: light.turn_on
-      #               target:
-      #                 entity_id:
-      #                   "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-      #                   | map(attribute='entity_id') | list }}"
-      #               data:
-      #                 brightness_step_pct: "{{ hold_press_change }}"
-      #                 transition: !input transition_time
-      #         - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
-      #           sequence:
-      #             - action: light.turn_on
-      #               target:
-      #                 entity_id:
-      #                   "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-      #                   | map(attribute='entity_id') | list }}"
-      #               data:
-      #                 brightness_pct: 100
-      #                 transition: !input transition_time
+      - conditions:
+          - "{{ command == 'up_hold' or command == 'up_press_release'}}"
+          - "{{ not (brightness_zigbee | default(false)) }}"
+        sequence:
+          - choose:
+              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
+                sequence:
+                  - action: light.turn_on
+                    target:
+                      entity_id:
+                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+                        | map(attribute='entity_id') | list }}"
+                    data:
+                      brightness_step_pct: "{{ hold_press_change }}"
+                      transition: !input transition_time
+              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
+                sequence:
+                  - action: light.turn_on
+                    target:
+                      entity_id:
+                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
+                        | map(attribute='entity_id') | list }}"
+                    data:
+                      brightness_pct: 100
+                      transition: !input transition_time
       - conditions:
           - "{{ command == 'down_hold' or command == 'down_press_release' }}"
           - "{{ not (brightness_zigbee | default(false)) }}"
@@ -550,11 +561,3 @@ action:
                   "timestamp": as_timestamp(now()),
                   "type": (included_scenes[current_preset] | from_json).type
                 } | to_json }}
-  - choose:
-      - conditions:
-          - "{{ command == 'up_hold' or command == 'down_hold' }}"
-          - "{{ not (brightness_zigbee | default(false)) }}"
-        sequence:
-          - service: light.toggle
-            target:
-              entity_id: "{{ target_lights[0] }}"
